Add: SDF heuristics
Small Domain First. It choses the unassigned variable with the smallest
domain for next assignment.

--- a/README
+++ b/README
@@ -2,3 +2,30 @@ Constraint Satisfaction Problem
 ===============================
 
 This is an assignment for Level-3/Term-2.
+
+Results
+-------
+
+- N = 10 (csp_task/data/d-10-01.txt.txt):
+  - Normal backtracking: 44379
+  - Backtrack w/ SDF: 265
+
+- N = 10 (csp_task/data/d-10-06.txt.txt):
+  - Normal backtracking: 2394
+  - Backtrack w/ SDF: 12265 (x)
+
+- N = 10 (csp_task/data/d-10-07.txt.txt):
+  - Normal backtracking: 44826
+  - Backtrack w/ SDF: 34705
+
+- N = 10 (csp_task/data/d-10-08.txt.txt):
+  - Normal backtracking: 8638
+  - Backtrack w/ SDF: 895
+
+- N = 10 (csp_task/data/d-10-09.txt.txt):
+  - Normal backtracking: 10514
+  - Backtrack w/ SDF: 8424
+
+- N = 15 (csp_task/data/d-15-01.txt.txt):
+  - Normal backtracking: 949203162
+  - Backtrack w/ SDF: ?
