--- a/README
+++ b/README
@@ -4,6 +4,21 @@ Constraint Satisfaction Problem
 This is an assignment for Level-3/Term-2.
 
 
+Overview
+--------
+
+A solution of constraint satisfaction problem for Latin Squares. The algorithms
+used are from the following websites.
+
+1. https://ktiml.mff.cuni.cz/~bartak/constraints/ordering.html
+2. https://ktiml.mff.cuni.cz/~bartak/constraints/consistent.html
+3. https://ktiml.mff.cuni.cz/~bartak/constraints/propagation.html
+
+The algorithm does not work as expected for the input of N = 15. It solves the
+problem only when Forward Checking or Looking Ahead schemes are used, not when
+normal backtracking is used.
+
+
 Results
 -------
 
@@ -62,7 +77,7 @@ Results
     +-------------------------+---------------+----------+
     | Scheme                  | Sequential    | SDF      |
     +-------------------------+---------------+----------+
-    | Normal backtracking     |               |          |
-    | Forward checking        |               |          |
-    | Looking  ahead          |               |          |
+    | Normal backtracking     | ???           | ???      |
+    | Forward checking        | 28017271      | 748961   |
+    | Looking  ahead          | 24257         | 223172   |
     +-------------------------+---------------+----------+
